--- a/chart.html
+++ b/chart.html
@@ -166,7 +166,7 @@
         </div>
 
         <div class="footer">
-            <p>数据来源：大连市旅游统计 | 可视化图表可嵌入地图故事中</p>
+            <p>数据来源：大连市旅游统计</p>
         </div>
     </div>
 
